--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "uber-eats-simulator",
-  "description": "Plugin WordPress simulateur de revenus UberEats auto-entrepreneur.",
+  "name": "ubereatssimulator",
   "author": "Guillaume Duhan",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build && firebase deploy"
   },
   "dependencies": {
     "vue": "^2.6.11"
